# Anonator

./: .gitignore  Makefile  README.md  anonator.spec  anonator_installer.iss  build.py  pyproject.toml
docs/: MAKEFILE_COMMANDS.md
launcher/: __init__.py  config.py  launcher.py  launcher_main.py  model_manager.py  test_launcher.py  updater.py  utils.py
pyinstaller_hooks/: runtime_hook_torch.py
resources/: CONFIG_EXAMPLE.md  DOCS.md  Makefile.md
scripts/: build_launcher.py  launcher.spec
src/anonator/: main.py
src/anonator/core/: anonymizer.py  config.py  mediapipe_detector.py  mtcnn_detector.py  processor.py  retinaface_detector.py  scene_detector.py  scrfd_detector.py  yolo_face_detector.py
src/anonator/ui/: brown_theme.json  frame_viewer.py  main_window.py  theme.py  video_player.py  widgets.py
src/anonator/utils/: __init__.py  model_downloader.py
tests/: README.md  conftest.py  prepare_test_data.py  test_gpu.py  test_gpu_performance.py  test_hipaa_mode.py  test_processor.py  test_progress.py  test_threshold_comparison.py  test_video.py
tests/benchmarks/: test_model_latency.py  test_processing_throughput.py
tests/data/: ground_truth.json
tests/integration/: test_detection_integration.py  test_video_processing.py
tests/unit/: test_anonymizer.py  test_config.py  test_processor.py
