[project]
name = "anonator"
version = "1.0.0"
description = "GPU-accelerated video face anonymization application"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "tkinterdnd2>=0.3.0",
    "imageio>=2.25.0",
    "imageio-ffmpeg>=0.4.6",
    "numpy<2",
    "pyinstaller>=6.16.0",
    "customtkinter>=5.2.0",
    "mediapipe>=0.10.21",
    "facenet-pytorch>=2.6.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.20.2",
    "ultralytics>=8.3.230",
    "huggingface-hub>=1.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

build = [
    "pyinstaller>=5.13.0",
]

[build-system]
requires = ["setuptools>=67.6", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring CUDA GPU",
    "benchmark: marks performance benchmark tests",
]
addopts = [
    "--strict-markers",
    "-v",
]
timeout = 30

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.92.0",
]
